# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame_display_component_classes"
version = "1.0.0"
description = "Custom display component classes for use in pygame user interfaces, including menus"
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]
urls.Code = "https://github.com/chris-henry-holland/Portfolio/tree/main/Python_projects/Pygame_Projects/General_pygame_tools"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pygame", "game", "UI", "user interface", "button", "slider", "text manager", "menu"]
dependencies = [
    "sortedcontainers>=2.4.0",
    "pygame>=2.1.3",
]
requires-python = ">=3.11"